<resources>
    <string name="app_name">Apps Portfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make your app material</string>
    <string name="go_ubiquitous">Go ubiquitous</string>
    <string name="capstone_my_app">Capstone: my own app</string>
</resources>
