<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ms.appsportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/my_nanodegree_apps"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_popular_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_button_primary"
        android:text="@string/popular_movies"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_stock_hawk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button_primary"
        android:text="@string/stock_hawk"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button_primary"
        android:text="@string/build_it_bigger"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_make_your_app_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button_primary"
        android:text="@string/make_your_app_material"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_go_ubiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button_primary"
        android:text="@string/go_ubiquitous"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_capstone_my_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_button_primary_dark"
        android:text="@string/capstone_my_app"
        android:textColor="@android:color/white" />


</LinearLayout>
